--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
     background-color: #d9dcd6;
 }
 
+/*Header*/
+
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -34,6 +36,8 @@ header nav {
     
 }
 
+/* Navigation bar within the header element */
+
 header nav ul {
     list-style-type: none;
 }
@@ -42,6 +46,8 @@ header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
+
+/*Text styles*/
 
 a {
     color: #ffffff;
@@ -52,13 +58,16 @@ p {
     font-size: 16px;
 }
 
-.hero {
+/* The background image */
+#hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
     background-size: cover;
     background-position: center;
 }
+
+/*Floats*/
 
 .float-left {
     float: left;
@@ -70,13 +79,15 @@ p {
     margin-left: 25px;
 }
 
+/*Main section */
 main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+/* Displayed on the side of the main*/
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -87,23 +98,27 @@ main {
     background-color: #2589bd;
 }
 
-.about-our-benefits {
+/* These elements have a class atrribute as each explain what the users receive */
+.benefit-outcomes {
     margin-bottom: 32px;
     color: #ffffff;
 
 }
 
-.about-our-benefits h3 {
+.benefit-outcomes h2 {
     margin-bottom: 10px;
     text-align: center;
 
 }
 
-.about-our-benefits img {
+/* These images each are above the description of the benefits outcome */
+.benefit-outcomes img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
+
+/*Services*/
 
 .services-offered {
     margin-bottom: 20px;
@@ -118,6 +133,8 @@ main {
     max-height: 200px;
 
 }
+
+/*Footer*/
 
 footer {
     padding: 30px;
